syntax = "proto3";

package agent_local;

option go_package = "agent_local";

import "google/api/annotations.proto";

message StatusRequest {}

message StatusResponse {
  string node_id = 1;
}

// AgentLocal service provides public methods for checking pmm-agent status locally.
service AgentLocal {
  // Status returns current pmm-agent status.
  rpc Status(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      post: "/local/Status"
      body: "*"
    };
  }
}
